--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,7 @@
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>2.15</version>
 				<configuration>
-					<configLocation>${basedir}\checkstyle.xml</configLocation>
+					<configLocation>${basedir}/checkstyle.xml</configLocation>
 				</configuration>
 			</plugin>
 		</plugins>
